--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,31 @@
 {
-    "name": "adamwathan/bootforms",
-    "description": "Just a Formbuilder with some Bootstrap specific conveniences. Remembers old input, retrieves error messages and handles all your boilerplate Bootstrap markup automatically.",
-    "authors": [
-        {
-            "name": "Adam Wathan",
-            "email": "adam.wathan@gmail.com"
-        }
-    ],
-    "license": "MIT",
-    "require": {
-        "php": ">=5.4.0",
-        "adamwathan/form": "^0.9.0"
+  "name": "galahad/bootforms",
+  "description": "Just a Formbuilder with some Bootstrap specific conveniences. Remembers old input, retrieves error messages and handles all your boilerplate Bootstrap markup automatically.",
+  "authors": [
+    {
+      "name": "Adam Wathan",
+      "email": "adam.wathan@gmail.com"
     },
-    "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "mockery/mockery": "0.9.*",
-        "satooshi/php-coveralls": "dev-master"
-    },
-    "autoload": {
-        "psr-0": {
-            "AdamWathan\\BootForms": "src/"
-        }
-    },
-    "minimum-stability": "stable"
+    {
+      "name": "Chris Morrell",
+      "homepage": "http://www.cmorrell.com"
+    }
+  ],
+  "license": "MIT",
+  "require": {
+    "php": ">=7.0",
+    "adamwathan/form": "^0.9.0",
+    "illuminate/support": "5.5.*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "3.7.*",
+    "mockery/mockery": "0.9.*",
+    "satooshi/php-coveralls": "dev-master"
+  },
+  "autoload": {
+    "psr-0": {
+      "Galahad\\BootForms": "src/"
+    }
+  },
+  "minimum-stability": "stable"
 }
