--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "galahad/bootforms",
-  "description": "Just a Formbuilder with some Bootstrap specific conveniences. Remembers old input, retrieves error messages and handles all your boilerplate Bootstrap markup automatically.",
+  "description": "Form builder with Bootstrap-specific conveniences. Remembers old input, retrieves error messages and handles all your boilerplate Bootstrap markup automatically.",
+  "keywords": ["laravel", "forms", "bootstrap", "bootforms", "bootform"],
   "authors": [
     {
       "name": "Adam Wathan",
@@ -18,14 +19,23 @@
     "illuminate/support": "5.5.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "3.7.*",
-    "mockery/mockery": "0.9.*",
-    "satooshi/php-coveralls": "dev-master"
+    "phpunit/phpunit": "6.3.*",
+    "mockery/mockery": "0.9.*"
   },
   "autoload": {
     "psr-4": {
       "Galahad\\BootForms\\": "src/"
     }
   },
-  "minimum-stability": "stable"
+  "minimum-stability": "stable",
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Galahad\\BootForms\\BootFormsServiceProvider"
+      ],
+      "aliases": {
+        "BootForm": "Galahad\\BootForms\\Facades\\BootForm"
+      }
+    }
+  }
 }
