--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.0",
-    "adamwathan/form": "^0.9.0",
+    "galahad/forms": "^1.0.0",
     "illuminate/support": "5.5.*"
   },
   "require-dev": {
