--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "6.3.*",
-    "mockery/mockery": "0.9.*"
+    "mockery/mockery": "0.9.*",
+    "php-coveralls/php-coveralls": "^1.0"
   },
   "autoload": {
     "psr-4": {
