--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
   "license": "MIT",
   "require": {
     "php": ">=7.0",
-    "galahad/forms": "^1.0.10",
-    "illuminate/support": "5.5.*"
+    "galahad/forms": "^1.1",
+    "illuminate/support": "5.5.*|5.6.*"
   },
   "require-dev": {
     "phpunit/phpunit": "6.3.*",
