--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "require": {
     "php": ">=7.0",
     "galahad/forms": "^1.1",
-    "illuminate/support": "5.5.*|5.6.*"
+    "illuminate/support": "5.5.*|5.6.*|5.7.*"
   },
   "require-dev": {
     "phpunit/phpunit": "6.3.*",
