--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.0",
-    "galahad/forms": "^1.1",
+    "galahad/forms": "dev-master",
     "illuminate/support": "5.5.*|5.6.*|5.7.*|5.8.*|6.*"
   },
   "require-dev": {
@@ -29,6 +29,9 @@
     }
   },
   "minimum-stability": "stable",
+  "repositories": [
+    {"type": "vcs","url": "https://github.com/mkappelixo/forms"}
+  ],
   "extra": {
     "laravel": {
       "providers": [
